--- a/i_css/tienda/header.css
+++ b/i_css/tienda/header.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 14 sept. 2020, 16:27:03
     Author     : desarrollador
