--- a/i_css/tienda/article.css
+++ b/i_css/tienda/article.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 15 sept. 2020, 13:46:17
     Author     : desarrollador
