--- a/i_css/tienda/aside.css
+++ b/i_css/tienda/aside.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 26 sept. 2020, 17:34:26
     Author     : desarrollador
