--- a/i_css/tienda/carrito.css
+++ b/i_css/tienda/carrito.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 28 nov. 2020, 12:40:34
     Author     : desarrollador
