--- a/i_css/tienda/detalles.css
+++ b/i_css/tienda/detalles.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 22 nov. 2020, 23:43:05
     Author     : desarrollador
