--- a/i_css/tienda/interior.css
+++ b/i_css/tienda/interior.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 26 oct. 2020, 2:59:29
     Author     : desarrollador
