--- a/i_css/tienda/nav.css
+++ b/i_css/tienda/nav.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 14 sept. 2020, 17:09:22
     Author     : desarrollador
