--- a/i_css/tienda/perfil.css
+++ b/i_css/tienda/perfil.css
@@ -1,3 +1,4 @@
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 14 oct. 2020, 12:35:12
     Author     : desarrollador
