--- a/i_css/i/index.css
+++ b/i_css/i/index.css
@@ -30,7 +30,7 @@
     ........................
 */
 h1, h2, h3, h4 {
-    font-family: var(--n-fuente);
+    /*font-family: var(--n-fuente);*/
 }
 /**:not(h1), *:not(h2), *:not(h3), *:not(h4) {
     font-family: var(--n-fuente-dos);
@@ -52,7 +52,7 @@ h1, h2, h3, h4 {
 }
 .n-grid > .area-1 > header > :nth-child(1) {
     color: var(--n-color);
-    font-family: var(--n-fuente-tres);
+    /*font-family: var(--n-fuente-tres);*/
     font-size: 1.50em;
     text-shadow: -1px 0 #373538, 0 1px #373538, 1px 0 #373538, 0 -1px #373538;
     opacity: 0.5;
@@ -134,6 +134,7 @@ h1, h2, h3, h4 {
     clip-path: circle(50% at 50% 50%);
 }
 .n-grid > .area-3 > article {
+    float: none;
     margin-bottom: 1em;
 }
 .n-grid > .area-3 > article > :nth-child(1), 
@@ -184,7 +185,7 @@ h1, h2, h3, h4 {
     float: left;
     width: 250px;
     height: 250px;
-    margin-right: 4em;
+    /*margin-right: 4em;*/
 }
 .area-3 > img.slide-1 {
     shape-outside: url(i_img/i/blob-1.png);
@@ -247,7 +248,7 @@ h1, h2, h3, h4 {
     top: 6em;
     z-index: 1;
     color: var(--n-color-tres);
-    font-family: var(--n-fuente);
+    /*font-family: var(--n-fuente);*/
     font-size: 2em;
     text-align: center;
     text-decoration: underline;
@@ -261,7 +262,7 @@ h1, h2, h3, h4 {
     top: 2em;
     z-index: 1;
     color: var(--n-color-tres);
-    font-family: var(--n-fuente-dos);
+    /*font-family: var(--n-fuente-dos);*/
     font-size: 4em;
     font-weight: bold;
     text-align: center;
@@ -319,7 +320,7 @@ footer > hr {
 }
 footer > p {
     color: var(--n-color-dos-uno);
-    font-family: var(--n-fuente-dos);
+    /*font-family: var(--n-fuente-dos);*/
     font-size: 0.70em;
     text-align: center;
 }
