--- a/i_css/i/index.css
+++ b/i_css/i/index.css
@@ -119,6 +119,7 @@ h1, h2, h3, h4 {
 */
 .n-grid > .area-3 {
     margin-top: 4em;
+    /*padding: 0em auto auto 0em;*/
 }
 .n-grid > .area-3 > h3 {
     color: var(--n-color);
@@ -186,6 +187,7 @@ h1, h2, h3, h4 {
     width: 250px;
     height: 250px;
     /*margin-right: 4em;*/
+    /*box-shadow: 0 0 10px #901E1D, 0 0 40px #901E1D, 0 0 80px #901E1D;*/
 }
 .area-3 > img.slide-1 {
     shape-outside: url(i_img/i/blob-1.png);
@@ -284,7 +286,7 @@ svg#derecha {
 svg > text.n-hacer {
     /*display: none;*/
     fill: var(--n-color);
-    font-family: Verdana;
+    font-family: var(--n-fuente-dos);
     font-size: 2em;
 }
 aside:hover svg > text.n-hacer { 
@@ -324,3 +326,14 @@ footer > p {
     font-size: 0.70em;
     text-align: center;
 }
+
+/*.bottom {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: -2em;
+    bottom: 50em;
+    z-index: 0;
+    width: 50%;
+    height: 20em;
+}*/
