--- a/i_css/i/index.css
+++ b/i_css/i/index.css
@@ -12,13 +12,7 @@
     grid-gap:0.625em;
     /*background-color: #2196F3;*/
 }
-.n-grid > .area-1,
-.n-grid > .area-2,
-.n-grid > .area-3,
-.n-grid > .area-4
-{
-    /*background-color: var(--n-color);*/
-}
+.n-grid > section { /*background-color: var(--n-color);*/ }
 .n-grid > .area-1 { grid-area: 1 / span 4 / 2 / 5; }
 .n-grid > .area-2 { grid-area: 2 / span 4 / 3 / 5; }
 .n-grid > .area-3 { grid-area: 3 / span 2 / 4 / 3; }
@@ -27,13 +21,6 @@
 /*
     Areas
 */
-
-.n-grid > .area-1 > main  > article {
-    padding: 2em 0em 0em 0em; 
-}
-.n-grid > .area-1 > main  > article > h4, .n-grid > .area-1 > main  > article > p {
-    /*padding: 0em 0em 0em 2em;*/ 
-}
 /*
     Header......................................................................
 */
@@ -72,15 +59,14 @@
     .n-grid > .area-1 > header > :nth-child(4) { text-shadow: none; }
 }
 /*
-    Main
+    Main........................................................................
 */
-.n-grid > .area-2 {
-/*    color: var(--n-color);
-    background-color: var(--n-color-dos);
-    border-radius: var(--n-radio);*/
-}
 .n-grid > .area-2 > main {
-    width: 500px;
+    position: relative;
+    z-index: 1;
+    font-size: 1em;
+    padding: 3em 0em 0em 3em;
+    transition: var(--n-transicion);
 }
 .n-grid > .area-2 > main > .circulo {
     float: left;
@@ -107,22 +93,42 @@
     margin-bottom: 1.50em;
     text-shadow: var(--n-sombra-caja-dos);
 } 
-.n-grid > .area-2 > main > h4 {
-    /*color: var(--n-color-dos-uno);*/
-} 
+.n-grid > .area-2 > main > h4 { text-shadow: var(--n-sombra-de-texto); }
 .n-grid > .area-2 > main > p {
     color: var(--n-color-tres);
     font-size: 0.80em;
     margin-bottom: 1.50em;
 }
+@media screen and (max-width: 440px) {
+    .n-grid > .area-2 > main {
+        font-size: 0.80em;
+        padding: 2.50em 0em 0em 1.50em;
+    }
+    .n-grid > .area-2 > main > .circulo {
+        width: 100px;
+        height: 100px;
+        margin: 0.50em;
+    }
+    .n-grid > .area-2 > main > .circulo > .foto {
+        width: 100px;
+        height: 100px;
+    }
+    .n-grid > .area-2 > main > h3 {
+        margin-bottom: 0.75em;
+    } 
+    .n-grid > .area-2 > main > p {
+        margin-bottom: 0.75em;
+    }
+}
 /*
-    Article
+    Article.....................................................................
 */
 .n-grid > .area-3 {
-    /*margin-top: 4em;*/
-/*    color: var(--n-color);
-    background-color: var(--n-color-dos);
-    border-radius: var(--n-radio);*/
+    position: relative;
+    z-index: 1;
+    font-size: 1em;
+    padding: 3em 0em 0em 3em;
+    transition: var(--n-transicion);
 }
 .n-grid > .area-3 > h3 {
     color: var(--n-color);
@@ -131,15 +137,13 @@
 }
 .n-grid > .area-3 > .svg-desarrollos {
     float: left;
-    width: 170px;
-    height: 170px;
+    width: 150px;
+    height: 150px;
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
 }
 .n-grid > .area-3 > article {
     float: none;
-/*    color: var(--n-color);
-    background-color: var(--n-color-dos);*/
     margin-bottom: 1em;
     
 }
@@ -148,10 +152,7 @@
 .n-grid > .area-3 > article > :nth-child(3) {
     margin: 0;
 }
-.n-grid > .area-3 > article > :nth-child(1) {
-    /*color: var(--n-color-dos-uno);*/
-    line-height: 130%;
-}
+.n-grid > .area-3 > article > :nth-child(1) { line-height: 130%; }
 .n-grid > .area-3 > article > :nth-child(2) {
     color: var(--n-color-tres);
     font-size: 0.50em;
@@ -159,10 +160,10 @@
 }
 .n-grid > .area-3 > article > :nth-child(3) {
     color: var(--n-color-tres);
-    font-size: 0.70em;margin: 0;
+    font-size: 0.70em;
 }
 .n-grid > .area-3 > article.trasladar {
-    transform: translate(1em, 0em);
+    transform: translate(0.75em, 0em);
 }
 /*
     Diapositiva
@@ -189,10 +190,8 @@
 .n-grid > .area-3 > img.slide-9,
 .n-grid > .area-3 > img.slide-10 {
     float: left;
-    width: 250px;
-    height: 250px;
-    /*margin-right: 4em;*/
-    /*box-shadow: 0 0 10px #901E1D, 0 0 40px #901E1D, 0 0 80px #901E1D;*/
+    width: 200px;
+    height: 350px;
 }
 .area-3 > img.slide-1 {
     shape-outside: url(i_img/i/blob-1.png);
@@ -234,23 +233,65 @@
     shape-outside: url(i_img/i/blob-10.png);
     clip-path: url(i_img/i/blob-10.png);
 }
+@media screen and (min-width: 320px) and (max-width: 600px){
+    .n-grid > .area-3 {
+        font-size: 0.80em;
+        padding: 2em 0em 0em 1.50em;
+    }
+    .n-grid > .area-3 > h3 {
+        margin-bottom: 0.75em;
+    }
+    .n-grid > .area-3 > .svg-desarrollos {
+        width: 100px;
+        height: 100px;
+    }
+    .n-grid > .area-3 > article {
+        margin-bottom: 0.50em;
+
+    }
+    .n-grid > .area-3 > article.trasladar {
+        transform: translate(0.50em, 0em);
+    }
+    .n-grid > .area-3 > img.slide-1,
+    .n-grid > .area-3 > img.slide-2,
+    .n-grid > .area-3 > img.slide-3,
+    .n-grid > .area-3 > img.slide-4,
+    .n-grid > .area-3 > img.slide-5,
+    .n-grid > .area-3 > img.slide-6,
+    .n-grid > .area-3 > img.slide-7,
+    .n-grid > .area-3 > img.slide-8,
+    .n-grid > .area-3 > img.slide-9,
+    .n-grid > .area-3 > img.slide-10 {
+        width: 120px;
+        height: 250px;
+    }
+}
+@media screen and (max-width: 319px){
+    .n-grid > .area-3 {
+        display: none;
+    }
+}
 /*
     Aside.......................................................................
 */
 .n-grid > .area-4 {
-    color: var(--n-color);
-    background-color: var(--n-color-dos);
-    margin-right: 3em;
-    border-radius: var(--n-radio);
+    /*background-color: var(--n-color-dos-uno);*/
+    display: flex;
+    justify-content: center;
+    position: relative;
+    z-index: 1;
+    font-size: 1em;
 }
 .n-grid > .area-4 > aside {
-    width: 550px;
+    background-color: var(--n-color-dos);
+    width: 350px;
+    height: 250px;
+    border-radius: var(--n-radio);
 }
 .n-grid > .area-4 > aside > p.pregunta {
     position: relative;
-    /*top: -2em;*/
+    top: 2em;
     z-index: 1;
-    transform: translateY(4em);
     color: var(--n-color);
     font-size: 2em;
     text-align: center;
@@ -263,7 +304,6 @@
 .n-grid > .area-4 > aside > p.respuesta {
     position: relative;
     z-index: 1;
-    transform: translateY(1em);
     color: var(--n-color-dos);
     font-size: 4em;
     font-weight: bold;
@@ -273,16 +313,16 @@
 svg#izquierda {
     position: absolute;
     z-index: 0;
-    transform: translate(8.70em, 6.50em);
+    transform: translate(1.00em, 4.50em);
 }
 svg#derecha {
     position: absolute;
     z-index: 0;
-    transform: translate(33.10em, 6.70em);
+    transform: translate(25.10em, 4.90em);
 }
 svg > text.n-hacer {
     fill: var(--n-color-dos);
-    /*font-family: var(--n-fuente-dos);*/
+    /*font-family: Vertana;*/
     font-size: 2em;
 }
 aside:hover svg > text.n-hacer { 
@@ -302,6 +342,22 @@ aside:hover svg > text.n-hacer {
         stroke-dashoffset: 0;
         stroke-dasharray: 0;
         fill: var(--n-color-dos);
+    }
+}
+@media screen and (min-width: 320px) and (max-width: 850px){
+    .n-grid > .area-3 { grid-area: 3 / span 4 / 4 / 5; }
+    .n-grid > .area-4 { grid-area: 4 / span 4 / 5 / 5; }
+    .n-grid > .area-5 { grid-area: 5 / span 4 / 6 / 5; }
+    
+    .n-grid > .area-4 {
+        background-color: var(--n-color-dos);
+    }
+}
+@media screen and (max-width: 366px){
+    .n-grid > .area-5 { grid-area: 4 / span 4 / 5 / 5; }
+    
+    .n-grid > .area-4 {
+        display: none;
     }
 }
 /*
