--- a/i_css/i/index.css
+++ b/i_css/i/index.css
@@ -351,6 +351,10 @@ aside:hover svg > text.n-hacer {
     
     .n-grid > .area-4 {
         background-color: var(--n-color-dos);
+        background-image: linear-gradient(to bottom, white, #1c1d22, white);
+    }
+    .n-grid > .area-4 > aside {
+        background-color: transparent;
     }
 }
 @media screen and (max-width: 366px){
@@ -361,12 +365,27 @@ aside:hover svg > text.n-hacer {
     }
 }
 /*
-    Footer
+    Footer......................................................................
 */
-footer {
+.n-grid > .area-5 {
     position: relative;
+    z-index: 0;
+    margin-top: -12em;
+    /*background-color: var(--n-color-dos-uno);*/
+}
+.svg-footer {
+    position: relative;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+}
+footer {
+    position: absolute;
+    bottom: 0em;
     z-index: 1;
-    margin-top: 18em;
+    width: 100%;
+    /*margin-top: -16em;*/
+    text-shadow: var(--n-sombra-de-texto-dos);
 }
 footer > hr {
     width: 70%;
@@ -377,8 +396,14 @@ footer > p {
     font-size: 70%;
     text-align: center;
 }
+@media screen and (min-width: 320px) and (max-width: 850px){
+    .n-grid > .area-5 {
+        margin-top: -0em;
+        /*background-color: var(--n-color-dos-uno);*/
+    }
+}
 /*
-    SVG
+    SVG.........................................................................
 */
 .n-svg-1 {
     position: absolute;
@@ -388,12 +413,34 @@ footer > p {
     background-repeat: no-repeat;
     overflow: hidden;
 }
-.n-svg-2 {
-    position: absolute;
-    top: 41.70em;
-    left: 0;
-    /*right: 0;*/
-    background-repeat: no-repeat;
-    width: 100%;
-    overflow: hidden;
+/*
+    Resolución no apta..........................................................
+*/
+@media screen and (min-width: 320px) {
+    .n-resolucion {
+        display: none;
+    }
+}
+@media screen and (max-width: 319px) {
+    .n-svg-1,
+    .n-grid > section { 
+        display: none;
+    }
+    .n-resolucion {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
+    .n-resolucion > img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+    }
+    .n-resolucion > .no-apta,
+    .n-resolucion > p > .no-apta {
+        font-family: var(--n-fuente-tres);
+        font-weight: bold;
+    }
 }
