--- a/i_css/i/root.css
+++ b/i_css/i/root.css
@@ -6,6 +6,9 @@
 *:after { 
     box-sizing: border-box; 
 }
+/*html {
+    scroll-behavior: smooth;
+}*/
 body { 
     color: #1c1d22 !important;
     font-size: 100% !important;
@@ -20,26 +23,24 @@ select {
     cursor: pointer; 
 }
 label { font-weight: bold; }
-/*html {
-    scroll-behavior: smooth;
-}*/
+
 :root {
     --n-fuente:                 "Georgia", Garamond, serif;
     --n-fuente-dos:             "Verdana", Helvetica, Tahoma, sans-serif;
     --n-fuente-tres:            "Lucida Console", Courier, monospace;
     
-    --n-color:                  white;/*rgb(255, 255, 255), hsl(0, 0%, 100%)*/
+    --n-color:                  white;/*hsl(0, 0%, 100%)*/
     --n-color-uno-uno:          rgba(255, 255, 255, 0.5);
-    --n-color-dos:              #1c1d22;/*rgb(28, 29, 34), hsl(230, 10%, 12%)*/
+    --n-color-dos:              #1c1d22;/*hsl(230, 10%, 12%)*/
     --n-color-dos-uno:          rgba(28, 29, 34, 0.5);
-    --n-color-tres:             #373538;/*rgb(55, 53, 56), hsl(280, 3%, 21%)*/
+    --n-color-tres:             #373538;/*hsl(280, 3%, 21%)*/
     --n-color-tres-uno:         rgba(55, 53, 56, 0.5);
-    --n-color-verde:            #457725;/*rgba(69, 119, 37, 0.5) hsl(97, 53%, 31%)*/
+    --n-color-verde:            #457725;/*hsl(97, 53%, 31%)*/
     --n-color-verde-uno:        rgba(69, 119, 37, 0.5);
-    --n-color-rojo:             #901E1D;/*rgb(144, 30, 29), hsl(1, 66%, 34%)*/
+    --n-color-rojo:             #901E1D;/*hsl(1, 66%, 34%)*/
     --n-color-rojo-uno:         rgb(144, 30, 29, 0.5);
     
-    --n-transicion:             all 0.8s ease-in-out;/*Admin...............................................................*/
+    --n-transicion:             all 0.8s ease-in-out;/*Admin................................................*/
     
     --n-radio:                  0.50em;
     --n-relleno:                0.50em;
