--- a/i_css/red_social/aside.css
+++ b/i_css/red_social/aside.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 25 dic. 2020, 4:50:00
-    Author     : desarrollador
+    Author     : neury-dev
 */
 .n-grid > .area-3 > aside > h4 {
     color: var(--n-color-dos);
