--- a/i_css/red_social/header.css
+++ b/i_css/red_social/header.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 19 dic. 2020, 22:23:30
-    Author     : desarrollador
+    Author     : neury-dev
 */
 /*
     header
