--- a/i_css/red_social/main.css
+++ b/i_css/red_social/main.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 20 dic. 2020, 20:26:41
-    Author     : desarrollador
+    Author     : neury-dev
 */
 .n-grid > .area-2 > main {
     margin: 0em 6em 0em 6em;
