--- a/i_css/red_social/perfil/chat.css
+++ b/i_css/red_social/perfil/chat.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 20 abr. 2021, 12:23:28
-    Author     : desarrollador
+    Author     : neury-dev
 */
 /* The popup chat - hidden by default */
 .chat-popup {
