--- a/i_css/red_social/perfil/editar.css
+++ b/i_css/red_social/perfil/editar.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 31 dic. 2020, 10:27:51
-    Author     : desarrollador
+    Author     : neury-dev
 */
 .n-grid > .area-3 > :nth-child(2) {
     margin-top: 8em;
