--- a/i_css/red_social/article.css
+++ b/i_css/red_social/article.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 26 dic. 2020, 17:07:31
-    Author     : desarrollador
+    Author     : neury-dev
 */
 /*.n-grid > .area-2 > article > :nth-child(2) {
     margin-top: 3em;
