--- a/i_css/red_social/nav.css
+++ b/i_css/red_social/nav.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 20 dic. 2020, 19:09:10
-    Author     : desarrollador
+    Author     : neury-dev
 */
 /*
     Cuadricula Principal
