--- a/i_css/red_social/perfil/chats.css
+++ b/i_css/red_social/perfil/chats.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 20 abr. 2021, 14:39:58
-    Author     : desarrollador
+    Author     : neury-dev
 */
 .n-grid {
     display: grid;
