--- a/i_css/red_social/perfil/nav.css
+++ b/i_css/red_social/perfil/nav.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 26 dic. 2020, 17:11:54
-    Author     : desarrollador
+    Author     : neury-dev
 */
 .n-grid > .area-2 { margin: 1em 0em 0em 0em; }
 .n-grid > .area-2 > nav { overflow: auto; white-space: nowrap; }
