--- a/i_css/red_social/perfil/perfil.css
+++ b/i_css/red_social/perfil/perfil.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 26 dic. 2020, 16:10:17
-    Author     : desarrollador
+    Author     : neury-dev
 */
 /*
     Cuadricula Principal
