--- a/i_css/red_social/perfil/publicar.css
+++ b/i_css/red_social/perfil/publicar.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 26 dic. 2020, 16:12:07
-    Author     : desarrollador
+    Author     : neury-dev
 */
 .n-grid > .area-3 > section {
     margin: 0em 6em 0em 6em;
