--- a/i_css/red_social/red_social.css
+++ b/i_css/red_social/red_social.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 19 dic. 2020, 16:13:17
-    Author     : desarrollador
+    Author     : neury-dev
 */
 header { text-align: center; width: 100%; }
 h1 > a  {
