--- a/i_css/red_social/usuarios.css
+++ b/i_css/red_social/usuarios.css
@@ -1,7 +1,7 @@
-@import url("http://localhost/AllInOne/front-css/root.css");
+@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 4 ene. 2021, 18:56:52
-    Author     : desarrollador
+    Author     : neury-dev
 */
 .n-grid > .area-2 > article > .contenedor {
     color: var(--n-color-dos);
