--- a/i_css/tienda/footer.css
+++ b/i_css/tienda/footer.css
@@ -1,13 +1,13 @@
 @import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 15 sept. 2020, 13:59:36
-    Author     : desarrollador
+    Author     : neury-dev
 */
-/*@import url("root.css");*/
 footer.n-footer {
     display: grid;
     grid-template-columns: 33% 25% auto;
-    grid-gap: 0.625em;             
+    grid-gap: 0.625em; 
+    margin-bottom: 2em;
 }
 .n-footer-area-1 { grid-area: 1 / 1 / span 1 / span 1; }
 .n-footer-area-2 { grid-area: 1 / 2 / span 1 / span 1; }
@@ -17,20 +17,15 @@ section.n-grid-area-5 > hr {
     width: 90%;
 }
 footer.n-footer > section > h3 {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente);
+    font-weight: bold;
     font-size: 0.90em;
 }
 footer.n-footer > section.n-footer-area-1 > p {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
     font-size: 0.90em;
     padding: 0em 0em 0.70em 0em;
 }
 footer.n-footer > section#n-contacto > form > p > input, 
 footer.n-footer > section#n-contacto > form > p > textArea { 
-    caret-color: var(--n-color-dos); 
-    font-family: var(--n-fuente-dos);
     font-size: 0.80em;
     width: 70%;
     border: 0.10em solid var(--n-color-dos);
@@ -55,7 +50,7 @@ footer.n-footer > section#n-contacto > form > p > textArea:invalid {
 footer.n-footer > section#n-contacto > form > button {
     color: var(--n-color);
     background-color: var(--n-color-dos);
-    font-family: var(--n-fuente);
+    font-weight: bold;
     font-size: 0.90em;
     width: 70%;
     border: none;
@@ -73,7 +68,6 @@ footer.n-footer > section.n-footer-area-2 {
 }
 footer.n-footer > section.n-footer-area-2 > a {
     color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
     font-size: 0.90em;
     text-decoration: none;
     padding: 0em 0em 0.70em 0em;
@@ -83,8 +77,6 @@ footer.n-footer > section.n-footer-area-2 > a:hover {
     font-weight: bold;
 }
 footer.n-footer > section.n-footer-area-3 > address {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
     font-size: 0.90em;
     margin: 0em 0em 0.70em 0em;
 }
